<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditProfileFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/edit_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/edit_profile"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/bio"
            android:inputType="textPersonName" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            tools:visibility="visible" />

        <Button
            android:id="@+id/edit_profile_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>