<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/pink"
    android:foregroundTint="#00FFFFFF"
    tools:context=".activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="316dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13999999"
        app:srcCompat="@drawable/streats_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView">

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:drawableStart="@mipmap/ic_launcher_username1"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/name"
            android:inputType="textNoSuggestions" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/username_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:drawableStart="@mipmap/ic_launcher_username1"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/username"
            android:inputType="textNoSuggestions" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:drawableStart="@mipmap/ic_email"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:translationZ="90dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:drawableStart="@mipmap/ic_launcher_password1"
            android:ems="10"
            android:fontFamily="@font/brandon_grotesque_black"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/brandon_grotesque_black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>