<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfilePageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="150dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#570000"
                android:fontFamily="@font/brandon_grotesque_black"
                android:padding="10dp"
                android:text="@string/covidInfo"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_header"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:src="@drawable/kor_cocobibi"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_profile_picture"
                android:layout_width="98dp"
                android:layout_height="98dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/profile_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_header">

                <androidx.cardview.widget.CardView
                    android:layout_width="98dp"
                    android:layout_height="98dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="98dp"
                        android:layout_height="98dp"
                        android:src="@drawable/ic_baseline_face_24"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_profile_picture">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black" />

                <TextView
                    android:id="@+id/user_profile_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:text="@string/separator" />

                <TextView
                    android:id="@+id/user_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black" />
            </LinearLayout>

            <TextView
                android:id="@+id/user_profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_bio" >

                <Button
                    android:id="@+id/upload_header_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:padding="8dp"
                    android:text="@string/change_header"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/upload_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:padding="8dp"
                    android:text="@string/change_avatar"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/edit_profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:padding="8dp"
                    android:text="@string/edit_profile"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" >

                <Button
                    android:id="@+id/favourites_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:text="@string/favourites"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_favorite_white_24"
                    tools:ignore="SmallSp" />

                <View
                    android:id="@+id/divider11"
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/bookmarks_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:text="@string/bookmarks"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_bookmark_white_24"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/bottomLinearLayout" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="109dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/brandon_grotesque_black"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>